# pydexbot

./: .gitignore  .gitmodules  Dockerfile  README.md  build.docker.image.sh  docker-compose.yml  pyproject.toml  setup.sh
config/: config.yaml
docs/: add.trade_pair.bot.md  poetry_init.md  setup.pydexbot.md
pydexbot/: bot_service.py  main.py  utils.py
scripts/: docker_pre_build.sh  sources.list.aliyun
tests/data/: exectrade.result.json
tools/: get.info.sh  get_price.sh  set_price.sh
