[tool.poetry]
name = "pydexbot"
version = "0.1.0"
description = "A Python bot project managed by Poetry"
authors = ["tychefi"]
readme = "README.md"
packages = [
    { include = "pydexbot" }
]

[tool.poetry.dependencies]
python = ">=3.9.1,<4.0"
coincurve = ">=21.0.0,<22.0.0"
cryptography = { version = ">=45.0.6,<46.0.0", python = ">3.9.1,<4.0" }
pycryptodome = ">=3.23.0,<4.0.0"
base58 = ">=2.1.1,<3.0.0"
pyflonkit = { path = "externals/pyflonkit" }
pyyaml = ">=6.0.2,<7.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.1.0"
pytest = "^8.4.1"

